graphql fixes
